# magic_circle

./: .bazelrc  BUILD.bazel  MODULE.bazel  NativeBindings.h  README.md  WORKSPACE.bazel  classes.txt  quickjs.BUILD.bazel
quickjs-android/: AndroidManifest.xml  BUILD.bazel
quickjs-android/assets/scripts/: index.js
quickjs-android/java/com/example/android/bazel/: MainActivity.java
quickjs-android/res/layout/: activity_main.xml
quickjs-jvm/: BUILD  Runner.java
quickjs-jvm/lukekaalim/quickjs/: IExternalJSFunction.java  IModuleProvider.java  JSContext.c  JSContext.java  JSRuntime.c  JSRuntime.java  JSValue.c  JSValue.h  JSValue.java  JavaReference.c  JavaReference.h  NativeBindings.c  NativeBindings.h  NativeBindings.java  QuickjsJava.c  QuickjsJava.java
